# asteroid-skedaddle

./: CMakeLists.txt  README.md  asteroid-skedaddle.desktop.template
i18n/: asteroid-skedaddle.de_DE.ts  asteroid-skedaddle.desktop.h  asteroid-skedaddle.en_GB.ts  asteroid-skedaddle.es.ts  asteroid-skedaddle.fr_FR.ts  asteroid-skedaddle.it.ts
src/: Announcer.qml  CMakeLists.txt  DataGrid.qml  GpxLog.cpp  GpxLog.h  GpxLog.qml  RunDisplay.qml  SatelliteSourceBridge.cpp  SatelliteSourceBridge.h  Settings.qml  StartDisplay.qml  Voice.cpp  Voice.h  main.cpp  main.qml  resources.qrc
